fix: filters work on firefox

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -482,7 +482,10 @@ nav span.dropdown__trigger:hover {
 
 .zooming-logo img {
   cursor: pointer;
-  filter: grayscale();
+  -webkit-filter: grayscale();
+  filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
+  -o-filter: grayscale();
+  -ms-filter: grayscale();
   width: 80%;
   padding: 10px;
 
@@ -498,7 +501,10 @@ nav span.dropdown__trigger:hover {
   -moz-transform: scale(1.1);
   -o-transform: scale(1.1);
   -ms-transform: scale(1.1);
-  filter: none;
+  -webkit-filter: none;
+  -moz-filter: none;
+  -o-filter: none;
+  -ms-filter: none;
 }
 
 .masonry__container .card {
